# imag-23-0345

./: CMakeLists.txt  README.md  setup.sh
Sphere-Example/: phantom_sphere.sh
Sphere-Example/Surface-Files/: sphere_inner.vtp  sphere_outer.vtp  sphere_outer_thickness.vtp
src/: decimateMesh.cxx  decimateMesh.cxx~  getMeshEdgeLengths.cxx  integrateFieldLines.cxx  laplacianSolver.cxx  makeAnnulus.cxx  parcellateSingleSurface.cxx  spmesh2voroInput.cxx  surface2spmeshInput.cxx
